--- a/index.html
+++ b/index.html
@@ -19,30 +19,188 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="angular-es6-webpack" class="anchor" href="#angular-es6-webpack" aria-hidden="true"><span class="octicon octicon-link"></span></a>angular-es6-webpack</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>A styleguide/generator for starting up a single page application using Angular.js ES6 and Webpack at its core.</p>
+
+<h1>
+<a id="content" class="anchor" href="#content" aria-hidden="true"><span class="octicon octicon-link"></span></a>Content</h1>
+
+<ul>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Set up generator for scaffolding</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Explain npm</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Explain babel</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Explain webpack</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Explain angular</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Explain eslint</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Explain karma</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Explain tape</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Explain jsdoc</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Explain less</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Settings &amp; workflow Atom editor</li>
+<li>
+<a href="https://github.com/TODO" class="user-mention">@TODO</a> Dutch version</li>
+</ul>
+
+<h1>
+<a id="walkthrough" class="anchor" href="#walkthrough" aria-hidden="true"><span class="octicon octicon-link"></span></a>Walkthrough</h1>
+
+<h2>
+<a id="build-system" class="anchor" href="#build-system" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build System</h2>
+
+<p>The package uses <code>webpack</code> for building the javascript, <code>less</code> and html files. <code>npm</code> is used to fire the command line scripts and handles installing of packages.</p>
+
+<p><code>webpack</code> handles all file-related concerns:</p>
+
+<ul>
+<li>Transpiling from ES6 to ES5 with <code>Babel</code>
+</li>
+<li>Loading HTML files as modules</li>
+<li>Transpiling <code>less</code> stylesheets and appending them to the DOM</li>
+<li>Bundling the app</li>
+<li>Loading all modules</li>
+<li>Starting a development server</li>
+<li>Refreshing the browser and rebuilding on file changes</li>
+<li>Generating boilerplate for the Angular app</li>
+</ul>
+
+<p><code>npm</code> is used to fire the cli and install packages:</p>
+
+<ul>
+<li>Installs all needed packages</li>
+<li>Allows us to run simple commands to start up the different cli scripts</li>
+</ul>
+
+<h2>
+<a id="file-structure" class="anchor" href="#file-structure" aria-hidden="true"><span class="octicon octicon-link"></span></a>File Structure</h2>
+
+<p>This repository contains multiple applications which use a set of modules.</p>
+
+<pre><code>src
+⋅⋅modules/
+⋅⋅⋅⋅modulename/  
+⋅⋅⋅⋅⋅⋅module.modulename.js * the main file for the module
+⋅⋅⋅⋅⋅⋅directive.modulename.js * a directive
+⋅⋅⋅⋅⋅⋅controller.modulename.js * a controller linked to the directive with controllers
+⋅⋅⋅⋅⋅⋅filter.modulename.js * a filter to be used inside the directive
+⋅⋅⋅⋅⋅⋅service.modulename.js * a service
+⋅⋅⋅⋅⋅⋅service.modulename.test.js * a file containing unit tests for the same file
+⋅⋅⋅⋅⋅⋅modulename.html * the template for the directive
+⋅⋅⋅⋅⋅⋅modulename.less * the styles for the directive
+⋅⋅applicationname/
+⋅⋅⋅⋅module.applicationname.js * the main file for an application
+⋅⋅application-template.html * the template (blue-imp) webpack uses to generate index.html's  
+⋅⋅tests.bundle.js * entry file for the test script
+</code></pre>
+
+<h2>
+<a id="testing-setup" class="anchor" href="#testing-setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Testing Setup</h2>
+
+<p>All tests are also written in ES6. We use Webpack to take care of the logistics of getting those files to run in the various browsers, just like with our client files. This is the testing stack:</p>
+
+<ul>
+<li><code>karma</code></li>
+<li>
+<code>webpack</code> + <code>babel</code>
+</li>
+<li><code>tape</code></li>
+</ul>
+
+<p>To run tests, type <code>npm test</code> or <code>npm run test:live</code> in the terminal. Read more about testing <a href="#testing">below</a>.</p>
+
+<h1>
+<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started</h1>
+
+<h2>
+<a id="installing" class="anchor" href="#installing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing</h2>
+
+<p>1 Make sure you have <code>node</code> and <code>npm</code> installed on your machine
+2 <code>npm install -g karma karma-cli webpack jsdoc</code> install global cli dependencies
+3 <code>npm install</code> to install dependencies</p>
+
+<h2>
+<a id="running-the-app" class="anchor" href="#running-the-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running the App</h2>
+
+<p>The package uses <code>npm</code> scripts to control <code>webpack</code>. After you have installed all dependencies, you may run the app. Running  <code>npm run dev</code> will set up a development environment. <code>webpack</code> will launch a development server and start watching all files with auto-reloading.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="npm-tasks" class="anchor" href="#npm-tasks" aria-hidden="true"><span class="octicon octicon-link"></span></a>npm Tasks</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Here's a list of available tasks:</p>
+
+<ul>
+<li>
+<code>npm test</code>
+
+<ul>
+<li>Will start the <code>karma</code> testrunner which in turn will start testing all written unit tests. It will report in the terminal and will export a lcov.info file.</li>
+</ul>
+</li>
+<li>
+<code>npm test:live</code>
+
+<ul>
+<li>Will start the <code>karma</code> testrunner and will continuously run the unit tests. <code>karma</code> will watch for file changes and will update the test info accordingly.</li>
+</ul>
+</li>
+<li>
+<code>npm dev</code>
+
+<ul>
+<li>This will use <code>webpack</code> to start up a development server with auto-reloading and will generate index.html files for all configured applications.</li>
+</ul>
+</li>
+<li>
+<code>npm prod</code>
+
+<ul>
+<li>This will run <code>eslint</code> to check the code for any style or syntax errors. Will start <code>webpack</code> to bundle and minify the javascript files into a single bundle. Will extract all styling and put it in a separate minified css file. And will generate the code documentation using <code>jsdoc</code>.</li>
+</ul>
+</li>
+</ul>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="development" class="anchor" href="#development" aria-hidden="true"><span class="octicon octicon-link"></span></a>Development</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>For the ideal development experience run both <code>npm run dev</code> and <code>npm run test:live</code> in separate terminal windows. Open up http://localhost:8080/dist/{{applicationname}} to see the page change as soon as your code changes. The terminal window with <code>npm run test:live</code> will continuously show you whether the unit tests are still running correctly.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Preferred setup with atom. <a href="https://github.com/TODO" class="user-mention">@TODO</a> add atom config</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="testing" class="anchor" href="#testing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Testing</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>To run the tests, run <code>npm test</code> or <code>npm run test:live</code>.</p>
+
+<p><code>Karma</code> combined with <code>webpack</code> runs all files matching <code>*.test.js</code> inside the <code>src</code> folder. This allows us to keep test files local to the component. The file <code>tests.bundle.js</code> is the bundle file for <strong>all</strong> our test files that Karma will run.</p>
+
+<p>Be sure to define your <code>*.test.js</code> files within their corresponding component directory. You must name the unit test file like so, <code>[name].test.js</code>.
+<code>tape</code> is the used testing framework but could easily be swapped with something like <code>jasmine</code>.</p>
+
+<p>Tests are ideally written in the following format:</p>
+
+<div class="highlight highlight-source-js"><pre><span class="pl-k">import</span> <span class="pl-smi">test</span> <span class="pl-k">from</span> <span class="pl-s"><span class="pl-pds">'</span>tape<span class="pl-pds">'</span></span>;
+<span class="pl-k">import</span> <span class="pl-smi">config</span> <span class="pl-k">from</span> <span class="pl-s"><span class="pl-pds">'</span>./config<span class="pl-pds">'</span></span>;
+
+<span class="pl-c1">test</span>(<span class="pl-s"><span class="pl-pds">'</span>Config function output type<span class="pl-pds">'</span></span>, (<span class="pl-smi">assert</span>) <span class="pl-k">=&gt;</span> {
+  <span class="pl-k">const</span> <span class="pl-c1">actual</span> <span class="pl-k">=</span> <span class="pl-k">typeof</span> <span class="pl-en">config</span>();
+  <span class="pl-k">const</span> <span class="pl-c1">expected</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>function<span class="pl-pds">'</span></span>;
+
+  <span class="pl-smi">assert</span>.<span class="pl-en">equal</span>(actual, expected, <span class="pl-s"><span class="pl-pds">'</span>config() should return a function.<span class="pl-pds">'</span></span>);
+
+  <span class="pl-smi">assert</span>.<span class="pl-en">end</span>();
+});</pre></div>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/BartWaardenburg/angular-es6-webpack">Angular-es6-webpack</a> is maintained by <a href="https://github.com/BartWaardenburg">BartWaardenburg</a>.</span>
